--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: "postgres:9.5"
     volumes:
       - postgres:/var/lib/postgresql/data
+    ports:
+      - "5432"
  
   app:
     depends_on:
